package ca.mcmaster.se2aa4.mazerunner;

public interface MazeExporter {
    Maze createMaze(String filePath) throws Exception;
}
